syntax = "proto3";

package main;

service WalletService {
    rpc CreateWallet (CreateWalletRequest) returns (WalletResponse) {}
}

message CreateWalletRequest {
    string userId = 1;
}

message WalletResponse {
    string _id = 1;
    float balance = 2;
}